# names-translator

./: .gitignore  LICENSE  MANIFEST.in  README.rst  pyproject.toml  setup.py
.github/workflows/: ci.yml  release.yml
data-src/: README.md  legacy_ua2ru.csv
dicts-dist/: README.rst  pyproject.toml
dicts-dist/names_translator_dicts_uk/: __init__.py
dicts-dist/names_translator_dicts_uk/data/: first.dawg  last.dawg  manifest.json
names_translator/: __init__.py  _text.py  dict_compiler.py  dicts.py  name_utils.py  names_translator.py
names_translator/data/: first.rules.json  last.rules.json  legacy.dawg  legacy.rules.json  manifest.json  patronymic.dawg  patronymic.rules.json
tests/: conftest.py  golden_chaplinsky.json  golden_chaplinsky_dicts.json  test_dicts.py  test_name_utils.py  test_transliterator.py
tools/: bench_dict_vs_dawg.py
