[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "names-translator-dicts-uk"
dynamic = ["version"]
description = "Compiled uk->ru name dictionaries (DAWG) for names_translator"
readme = "README.rst"
requires-python = ">=3.9"
license = "MIT"
authors = [
    {name = "dchaplinsky", email = "chaplinsky.dmitry@gmail.com"},
]
keywords = ["ukrainian", "names", "translation", "dictionaries", "dawg"]
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Natural Language :: Ukrainian",
    "Natural Language :: Russian",
    "Topic :: Text Processing :: Linguistic",
]
dependencies = [
    "dawg2-python>=0.9",
]

[project.urls]
Homepage = "https://github.com/dchaplinsky/names-translator"

[tool.setuptools]
packages = ["names_translator_dicts_uk"]

[tool.setuptools.dynamic]
version = {attr = "names_translator_dicts_uk.__version__"}

[tool.setuptools.package-data]
names_translator_dicts_uk = ["data/*.dawg", "data/*.json"]
